--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
+    "@vitejs/plugin-vue-jsx": "^5.0.1",
     "axios": "^1.11.0",
     "dayjs": "^1.11.13",
     "electron-updater": "^6.3.9",
