--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build:linux": "npm run build && electron-builder --linux"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
